# vacuumserval.github.io

./: .gitignore  LICENSE  Makefile  index.html  make.bat
8115215abb477bbd0354397f30b70ecddfa905aa/doctrees/: environment.pickle  index.doctree
8115215abb477bbd0354397f30b70ecddfa905aa/doctrees/infrastructure/: bscc.doctree  index.doctree  linux.doctree  local.doctree  mamba.doctree  precipitate.doctree  readme.doctree
8115215abb477bbd0354397f30b70ecddfa905aa/doctrees/martensite/: burgers.doctree
8115215abb477bbd0354397f30b70ecddfa905aa/doctrees/other/: burgers.doctree  precipitate.doctree
8115215abb477bbd0354397f30b70ecddfa905aa/doctrees/phasefield/: burgers.doctree  hexsq.doctree  linux.doctree  pfc.doctree  pfmartensite.doctree  (+2 more)
8115215abb477bbd0354397f30b70ecddfa905aa/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
source/: autre.rst  comp.rst  conf.py  index.rst  mse.rst  program.rst
source/DFT/: index.rst  phonon.md
source/MI/: env.md  index.rst
source/PF/: fourier.md  index.rst  kirkendall.ipynb  kirkendall.nb  kirkendall1.nb  pf-elas.md  pfc-gb.ipynb  phasediag.nb
source/_static/spinodalCUDA/: CMakeLists.txt
source/comp/: ai4s.md  dft.md  pf.md
source/course/: mge.md
source/infrastructure/: linux.md  local.md  mamba.md  namelist.csv
source/martensite/: burgers.ipynb
source/mse/: phase.md
source/other/: PhaseDiagramPFC.nb  PhaseDiagramPFC2D.nb  draw.py  fftexample.cu  main.cu  namelist.xlsx  precipitate.md
source/phasefield/: PhaseDiagramPFC2D.nb  hexsq.ipynb  pfc.ipynb
(+70 files in other folders)
